codepkg/objects/AuditHistoryTracking__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <customSettingsVisibility>Public</customSettingsVisibility>
    <fields>
        <fullName>Enable__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Enable Audit History Tracking</description>
        <label>Enable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Named_Credential__c</fullName>
        <description>The Named Credentials to use when calling out to Datasync Service.</description>
        <label>Named Credential</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Support_Email__c</fullName>
        <description>The email to send to for notifications.</description>
        <label>Support Email</label>
        <type>Email</type>
    </fields>
    <label>AuditHistoryTracking</label>
</CustomObject>